# toyai

./: .gitignore  README.md  autograd.md  demo.ipynb  example.py  pyproject.toml
ms-phi/: download_model.ipynb  modeling_phi.py  requirements.txt
src/: download_model.ipynb
toygpt/: .gitignore  README.md  download_model.ipynb  experiments.ipynb  model.py  modeling_gpt.py  requirements.txt  try_model.py
toygrad/: autograd.md  engine.py  engine_test.py  example.py  nn.py  pytorch_demo.ipynb
